# RegionX-Node

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  rust-toolchain.toml  rustc-ice-2024-04-23T01_53_06-3023032.txt  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: basic.yml  benchmarks.yml  ci.yml  coverage.yml  dependencies.yml  lint-e2e_tests.yml  release.yml  smoke.yml  test-code.yml  tests.yml  try_runtime.yml
config/: HEADER-GPL3  runtime-weight-template.hbs
e2e_tests/: common.js  common.ts  consts.ts  coretime.common.ts  custom-fee-payment.js  delegated-governance.js  governance.js  ismp.common.ts  native-fee-payment.js  native-governance.js  package.json  tsconfig.json  types.ts  xc-regions.common.ts
e2e_tests/fee-payment/: custom.js  custom.ts  native.js  native.ts
e2e_tests/governance/: delegated.js  delegated.ts  native.js  native.ts
e2e_tests/order/: processing.ts
e2e_tests/xc-transfer/: asset-transfer.ts  region-transfer.ts
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  runtime_api.rs  service.rs
node/src/chain_spec/: cocos.rs  mod.rs  regionx_rococo.rs
node/src/chain_spec/exported/: cocos-raw.json  cocos.json
node/src/local/: chain_spec.rs  mod.rs  service.rs
node/src/parachain/: chain_spec.rs  mod.rs  service.rs
pallets/market/: Cargo.toml
pallets/market/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/orders/: Cargo.toml
pallets/orders/src/: benchmarking.rs  lib.rs  mock.rs  runtime_api.rs  tests.rs  types.rs  weights.rs
pallets/processor/: Cargo.toml
pallets/processor/src/: assigner.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/regions/: Cargo.toml  README.md
pallets/regions/src/: benchmarking.rs  ismp_mock.rs  lib.rs  mock.rs  nonfungible_impls.rs  primitives.rs  tests.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/nonfungible/: Cargo.toml
primitives/nonfungible/src/: lib.rs
primitives/order/: Cargo.toml
primitives/order/src/: lib.rs
primitives/region/: Cargo.toml
primitives/region/src/: lib.rs
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/cocos/: Cargo.toml  build.rs
runtime/cocos/src/: impls.rs  lib.rs  xcm_config.rs
runtime/cocos/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/cocos/src/weights/: cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_asset_rate.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_conviction_voting_delegated_conviction_voting.rs  pallet_conviction_voting_native_conviction_voting.rs  pallet_market.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_orders.rs  pallet_preimage.rs  pallet_processor.rs  pallet_proxy.rs  pallet_regions.rs  pallet_session.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_utility.rs  pallet_whitelist.rs
runtime/common/: Cargo.toml
runtime/common/src/: assets.rs  lib.rs  primitives.rs
runtime/local/: Cargo.toml
runtime/local/src/: lib.rs
runtime/primitives/: Cargo.toml
runtime/primitives/src/: assets.rs  lib.rs
runtime/regionx/: Cargo.toml
runtime/regionx-kusama/: Cargo.toml
runtime/regionx-rococo/: Cargo.toml
runtime/regionx-rococo/src/: adapter.rs  impls.rs  lib.rs  xcm_config.rs
runtime/regionx-rococo/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/regionx/src/: impls.rs  ismp.rs  lib.rs  xcm_config.rs
runtime/regionx/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/regionx/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/src/: lib.rs
scripts/: benchmarker.sh  check-dependency-versions.sh  test-runner.sh
zombienet_tests/: 0001-block-production.zndsl  0001-smoke-test.toml  0001-smoke-test.zndsl  0002-native-fee-payment.zndsl  0003-custom-fee-payment.toml  0003-custom-fee-payment.zndsl  0004-delegated-governance.zndsl  0004-governance.zndsl  0005-native-governance.zndsl  0006-asset-transfer.zndsl  0006-xc-transfer.zndsl  0007-region-transfer.zndsl
zombienet_tests/fee-payment/: custom-fee-payment.zndsl  native-fee-payment.toml  native-fee-payment.zndsl
zombienet_tests/general/: block-production.toml  block-production.zndsl
zombienet_tests/governance/: delegated-governance.toml  delegated-governance.zndsl  native-governance.zndsl
zombienet_tests/order/: processing.toml  processing.zndsl
zombienet_tests/xc-transfer/: asset-transfer.toml  asset-transfer.zndsl  region-transfer.toml  region-transfer.zndsl
