[workspace]
resolver = "2"
members = [
	"node",
	"runtime/*",
]

[workspace.package]
name = "regionx"
version = "0.1.0"
authors = ["Anonymous"]
description = "RegionX Coretime market Kusama runtime"
license = "Apache-2.0"
homepage = "https://regionx.tech/"
repository = "https://github.com/RegionX-Labs/RegionX-Node"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.130", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
clap = { version = "4.4.8" }
futures = { version = "0.3.29" }
jsonrpsee = { version = "0.16.3" }
color-print = "0.3.4"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hex-literal = { version = "0.4.1" }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.9.0", default-features = false }
smallvec = "1.11.0"
serde_json = "1.0.111"

# wasm
frame-benchmarking = { version = "30.0.0", default-features = false }
frame-executive = { version = "30.0.0", default-features = false }
frame-support = { version = "30.0.0", default-features = false }
frame-system = { version = "30.0.0", default-features = false }
frame-system-benchmarking = { version = "30.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "28.0.0", default-features = false }
frame-try-runtime = { version = "0.36.0", default-features = false }
pallet-aura = { version = "29.0.0", default-features = false }
pallet-authorship = { version = "30.0.0", default-features = false }
pallet-balances = { version = "30.0.0", default-features = false }
pallet-session = { version = "30.0.0", default-features = false }
pallet-sudo = { version = "30.0.0", default-features = false }
pallet-timestamp = { version = "29.0.0", default-features = false }
pallet-transaction-payment = { version = "30.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "30.0.0", default-features = false }
pallet-message-queue = { version = "33.0.0", default-features = false }
pallet-multisig = { version = "30.0.0", default-features = false }
pallet-proxy = { version = "30.0.0", default-features = false }
pallet-utility = { version = "30.0.0", default-features = false }
sp-api = { version = "28.0.0", default-features = false }
sp-blockchain = { version = "30.0.0", default-features = false }
sp-io = { version = "32.0.0", default-features = false }
sp-trie = { version = "31.0.0", default-features = false }
sp-block-builder = { version = "28.0.0", default-features = false }
sp-consensus-aura = { version = "0.34.0", default-features = false }
sp-consensus-beefy = { version = "15.0.0", default-features = false }
sp-core = { version = "30.0.0", default-features = false }
sp-inherents = { version = "28.0.0", default-features = false }
sp-offchain = { version = "28.0.0", default-features = false }
sp-runtime = { version = "33.0.0", default-features = false }
sp-session = { version = "29.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "28.0.0", default-features = false }
sp-version = { version = "31.0.0", default-features = false }
sp-genesis-builder = { version = "0.9.0", default-features = false }
pallet-xcm = { version = "9.0.1", default-features = false }
polkadot-parachain-primitives = { version = "8.0.0", default-features = false }
polkadot-runtime-common = { version = "9.0.0", default-features = false }
xcm = { version = "9.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "9.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "9.0.1", package = "staging-xcm-executor", default-features = false }
cumulus-primitives-aura = { version = "0.9.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "11.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.9.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.9.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.9.0", default-features = false, features = ["parameterized-consensus-hook"] }
cumulus-pallet-xcm = { version = "0.9.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.9.0", default-features = false }
cumulus-primitives-core = { version = "0.9.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.9.0", default-features = false }
cumulus-primitives-utility = { version = "0.9.0", default-features = false }
pallet-collator-selection = { version = "11.0.0", default-features = false }
parachain-info = { version = "0.9.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "9.0.0", default-features = false }
sp-timestamp = { version = "28.0.0", default-features = false }
sp-keystore = { version = "0.36.0", default-features = false }
sp-mmr-primitives = { version = "28.0.0", default-features = false }
sp-storage = { version = "19.0.0", default-features = false }
pallet-beefy-mmr = { version = "30.0.0", default-features = false }
pallet-mmr = { version = "29.0.0", default-features = false }

# client
frame-benchmarking-cli = "34.0.0"
pallet-transaction-payment-rpc = "32.0.0"
sc-basic-authorship = "0.36.0"
sc-chain-spec = "29.0.0"
sc-cli = "0.38.0"
sc-client-api = "30.0.0"
sc-consensus = "0.35.0"
sc-executor = "0.34.0"
sc-network = "0.36.0"
sc-network-sync = "0.35.0"
sc-network-common = "0.35.0"
sc-rpc = "31.0.0"
sc-service = "0.37.0"
sc-sysinfo = "29.0.0"
sc-telemetry = "17.0.0"
sc-tracing = "30.0.0"
sc-transaction-pool = "30.0.0"
sc-transaction-pool-api = "30.0.0"
sc-offchain = "31.0.0"
substrate-frame-rpc-system = "30.0.0"
substrate-prometheus-endpoint = "0.17.0"
try-runtime-cli = "0.40.0"
polkadot-cli = "9.0.0"
polkadot-primitives = "9.0.0"
polkadot-service = "9.0.0"
cumulus-client-cli = "0.9.0"
cumulus-client-consensus-aura = "0.9.0"
cumulus-client-consensus-common = "0.9.0"
cumulus-client-network = "0.9.0"
cumulus-client-service = "0.9.0"
cumulus-client-parachain-inherent = "0.3.0"
cumulus-primitives-parachain-inherent = "0.9.0"
cumulus-relay-chain-interface = "0.9.0"
cumulus-client-consensus-proposer = "0.9.0"
cumulus-client-collator = "0.9.0"
substrate-wasm-builder = { version = "19.0.0" }
substrate-build-script-utils = "11.0.0"

# Orml
orml-asset-registry = { version = "0.7.0", default-features = false }
orml-currencies = { version = "0.7.0", default-features = false }
orml-tokens = { version = "0.7.0", default-features = false }
orml-traits = { version = "0.7.0", default-features = false }

# Polytope Labs
ismp = { git="https://github.com/Szegoo/hyperbridge.git", branch="fix-to-string", default-features = false }
pallet-ismp = { git="https://github.com/Szegoo/hyperbridge.git", branch="fix-to-string", default-features = false }
ismp-parachain = { git="https://github.com/Szegoo/hyperbridge.git", branch="fix-to-string", default-features = false }
ismp-parachain-inherent = { git="https://github.com/Szegoo/hyperbridge.git", branch="fix-to-string", default-features = false }
pallet-ismp-runtime-api = { git="https://github.com/Szegoo/hyperbridge.git", branch="fix-to-string", default-features = false }
ismp-parachain-runtime-api = { git="https://github.com/Szegoo/hyperbridge.git", branch="fix-to-string", default-features = false }

# Local
regionx-primitives = { path = "./runtime/primitives", default-features = false }
regionx-runtime = { path = "./runtime/regionx", default-features = false }
