[package]
name = "pallet-market"
authors = ["Anonymous"]
description = "Pallet containing the Coretime marketplace logic"
version = "0.1.0"
license = "GPLv3"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = {  workspace = true,  default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = {  workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-broker = { workspace = true, default-features = false }

# Local
nonfungible-primitives = { workspace = true, default-features = false }
pallet-regions = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true }
pallet-balances = { workspace = true, default-features = false }
ismp-testsuite = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"log/std",
	"codec/std",
	"nonfungible-primitives/std",
	"scale-info/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-broker/std",
	"pallet-regions/std",
]
try-runtime = [ "frame-support/try-runtime" ]
