[package]
name = "pallet-regions"
authors = ["Anonymous"]
description = "Pallet responsible for handling Coretime regions"
version = "0.1.0"
license = "GPLv3"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = {  workspace = true,  default-features = false, features = ["derive"] }

# Polytope labs
ismp = { workspace = true, default-features = false }
ismp-parachain = { workspace = true, default-features = false }
pallet-ismp = { workspace = true, default-features = false }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = {  workspace = true, default-features = false }
pallet-broker = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
hex = "0.4.3"
serde = { workspace = true }
pallet-balances = { workspace = true, default-features = false }
ismp-testsuite = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"log/std",
	"codec/std",
	"ismp/std",
	"ismp-parachain/std",
	"scale-info/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-broker/std",
	"pallet-ismp/std",
]
try-runtime = [ "frame-support/try-runtime" ]
